Added buch of stuff like: - Category filtering - Option loading - Option generation - ...

--- a/SeriousGameEngine/MainWindow.xaml
+++ b/SeriousGameEngine/MainWindow.xaml
@@ -169,7 +169,7 @@
                             </Border>
 
                             <Grid x:Name="Grid_Subjects" Margin="5,0,0,0">
-                                <Border x:Name="Border_SubjectsScience" VerticalAlignment="Stretch" Background="#FF0A2630" BorderBrush="#FF0A2630" BorderThickness="1,1,1,1" CornerRadius="8,8,8,8" Margin="0" d:IsHidden="True">
+                                <Border x:Name="Border_SubjectsScience" VerticalAlignment="Stretch" Background="#FF0A2630" BorderBrush="#FF0A2630" BorderThickness="1,1,1,1" CornerRadius="8,8,8,8" Margin="0">
                                     <UniformGrid x:Name="Grid_SubjectsScience" Margin="10" Background="Transparent" Columns="4" VerticalAlignment="Top">
 
                                         <Border x:Name="Border_Math" Background="#FF9C8A87" BorderBrush="#FF0A2630" BorderThickness="1,1,1,1" CornerRadius="8,8,8,8" Margin="0,0,0,20" Height="122" Width="180">
@@ -196,7 +196,7 @@
                                             <Button x:Name="Button_Sciences" Margin="0,0,0,20" Background="Transparent" BorderBrush="Transparent" Foreground="#FF0A2630" 
                         Content="Informatik" FontFamily="Arial" Width="180" Height="122" FontSize="14" FontWeight="Bold"/>
                                         </Border>
-                                    
+                                        
                                     </UniformGrid>
                                 </Border>
 
@@ -472,7 +472,7 @@
                         </DockPanel>
                     </Grid>
 
-                    <Grid x:Name="Grid_Modifyscreen" Margin="0" d:IsHidden="True">
+                    <Grid x:Name="Grid_Modifyscreen" Margin="0">
 
                         <DockPanel x:Name="Modify_DockPanel" LastChildFill="True">
 
@@ -483,11 +483,13 @@
 
                                         <TextBlock x:Name="Text_HeadlineCategory" Foreground="#FF9C8A87" FontSize="16" FontFamily="Arial" Margin="0,20" HorizontalAlignment="Center" VerticalAlignment="Center" Text="KATEGORIEN"/>
 
-                                        <Button x:Name="Button_Level" Margin="5,10" Content="Level" Background="#FF0A2630" BorderBrush="#FF0A2630" 
+                                        <StackPanel x:Name="Category_Buttons" Margin="20,10,5,0">
+                                            <Button x:Name="Button_Level" Margin="0,10,0,0" Content="Level" Background="#FF0A2630" BorderBrush="#FF0A2630" 
                                             Foreground="#FF91BAD5" FontFamily="Arial" HorizontalAlignment="Left" FontSize="13" VerticalAlignment="Center"></Button>
 
-                                        <Button x:Name="Button_Character" Margin="5,10" Content="Charkter" Background="#FF0A2630" BorderBrush="#FF0A2630" 
+                                            <Button x:Name="Button_Character" Margin="0,10,0,0" Content="Charkter" Background="#FF0A2630" BorderBrush="#FF0A2630" 
                                             Foreground="#FF91BAD5" FontFamily="Arial" HorizontalAlignment="Left" FontSize="13" VerticalAlignment="Center" Height="18"></Button>
+                                        </StackPanel>
 
                                     </StackPanel>
                                 </ScrollViewer>
@@ -529,7 +531,7 @@
 
                     </Grid>
 
-                    <Grid x:Name="Grid_Exportscreen" Margin="0" HorizontalAlignment="Left">
+                    <Grid x:Name="Grid_Exportscreen" Margin="0" HorizontalAlignment="Left" d:IsHidden="True">
                         <DockPanel >
                             <Border x:Name="Border_Exportsmenu" Background="#FF0A2630" BorderBrush="#FF0A2630" BorderThickness="1,1,1,1" CornerRadius="8,8,8,8" Margin="0" Width="150">
                                 <StackPanel Margin="20">
