--- a/SeriousGameEngine/MainWindow.xaml
+++ b/SeriousGameEngine/MainWindow.xaml
@@ -68,7 +68,7 @@
     <Grid x:Name="Grid_Background" Background="#FF5C6C74">
 
         <DockPanel Margin="8">
-            <Grid>
+            <Grid x:Name="Grid_MenuSettings">
                 <StackPanel x:Name="Sideboard" Margin="0" Width="200" Background="Transparent">
                     <Border x:Name="Menu_Panel_Border" Background="#FF0A2630" BorderBrush="#FF0A2630" BorderThickness="1,1,1,1" CornerRadius="8,8,8,8" Margin="0" Height="673">
                         <StackPanel x:Name="Menu_Panel" Margin="0" Background="Transparent">
@@ -124,7 +124,7 @@
 
                 <Grid x:Name="Screens" DockPanel.Dock="Bottom" Margin="0,10,0,0">
 
-                    <Grid x:Name="Grid_Homescreen" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background="Transparent" d:IsHidden="True">
+                    <Grid x:Name="Grid_Homescreen" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background="Transparent">
                         <DockPanel x:Name="Games_Screen" LastChildFill="True">
                             <Button x:Name="Button_NewGame" Style="{DynamicResource RoundedCornerStyle}" DockPanel.Dock="Top" Margin="0,0,0,0" Content="Neues Serious Game erstellen" Background="#FF0A2630" BorderBrush="#FF0A2630" Foreground="#FF91BAD5" Height="40" HorizontalAlignment="Left" Width="250" FontSize="14" Click="Button_NewGame_Click"/>
 
@@ -468,7 +468,7 @@
                         </DockPanel>
                     </Grid>
 
-                    <Grid x:Name="Grid_Modifyscreen" Margin="0">
+                    <Grid x:Name="Grid_Modifyscreen" Margin="0" d:IsHidden="True">
 
                         <DockPanel x:Name="Modify_DockPanel" LastChildFill="True">
 
